Ben found the button! home page dynamic for all screen sizes

--- a/Frontend/src/pages/Form/Form.css
+++ b/Frontend/src/pages/Form/Form.css
@@ -158,6 +158,10 @@ button {
 
   /* LAPTOP */
   @media (min-width: 768px) {
+    hr {
+        display: none;
+    }
+
     .form-box {
         margin-left: 10em;
         margin-right: 10em;
