--- a/Frontend/src/pages/Form/Form.css
+++ b/Frontend/src/pages/Form/Form.css
@@ -76,31 +76,36 @@ hr {
     margin-right: 12%;
 }
 
-.textarea {
-    display: block;
-    width: 100%;
-    overflow: hidden;
-    resize: both;
-    min-height: 40px;
-    line-height: 20px;
-  }
-  
-  .textarea[contenteditable]:empty::before {
-    content: "Your review here";
-    color: gray;
-  }
-
-.review-text {
+/* Character Counter */
+textarea {
+    width: 85%;
+    height: 20%;
+    box-sizing: border-box;
+    min-height: 100px;
+    margin-left: 2em;
+    resize: none;
+    padding: 0.5rem;
+    border: 1.5px solid lightsalmon;
     background-color: whitesmoke;
     color: black;
     box-sizing: border-box;
-    width: 85%;
-    height: 20%;
-    margin-left: 2em;
-    border: 1.5px solid lightsalmon;
-    box-sizing: border-box;
 }
 
+textarea:focus {
+      outline: none;
+      border: 1px solid darken(#ddd, 5%);
+      box-shadow: inset 0 0 0.5rem darken(#ddd, 5%);
+    }
+  
+  .word-counter {
+    margin-top: 1em;
+    margin-right: 1em;
+    float: right;
+    padding: 0.1rem 0 0 0;
+    font-size: .8em;
+    font-weight: italic;
+  }
+  
 button {
     background-color: #fbe8a6;
     border-color: #ffa07a;
