--- a/Frontend/src/pages/Form/Form.css
+++ b/Frontend/src/pages/Form/Form.css
@@ -91,22 +91,16 @@ textarea {
     box-sizing: border-box;
 }
 
-textarea:focus {
-      outline: none;
-      border: 1px solid darken(#ddd, 5%);
-      box-shadow: inset 0 0 0.5rem darken(#ddd, 5%);
-    }
-  
-  .word-counter {
+.word-counter {
     margin-top: 1em;
     margin-right: 1em;
     float: right;
     padding: 0.1rem 0 0 0;
     font-size: .8em;
     font-weight: italic;
-  }
+}
   
-button {
+.submit-review {
     background-color: #fbe8a6;
     border-color: #ffa07a;
     border-radius: 10px;
@@ -114,6 +108,12 @@ button {
 
 .button-submit {
     text-align: center;
+}
+
+.submit-review {
+    text-align: center;
+    border-color: #ffa07a;
+    border-radius: 10px;
 }
 
 /* Confirmation Overlay */
