--- a/Frontend/src/pages/Form/Form.css
+++ b/Frontend/src/pages/Form/Form.css
@@ -15,10 +15,10 @@ hr {
     margin-bottom: 3em;
 }
 
-.appName {
-    letter-spacing: .3em;
-    width: 100%;
-}
+/*.appName {*/
+/*    letter-spacing: .3em;*/
+/*    width: 100%;*/
+/*}*/
 
 .form-parameters {
     width: auto;
