Fixed the SearchBar component on the Results page. Tried to center the mobile version of the header but literally made no progress.

--- a/Frontend/src/components/Header/Header.css
+++ b/Frontend/src/components/Header/Header.css
@@ -25,6 +25,10 @@
     padding-left: 50px;
 }
 
+.bottom-border {
+    border-bottom: 2px solid #EF7B45;
+}
+
 /*.navbar-icon {*/
 /*    margin-right: 0.5rem;*/
 /*}*/
