fixed header, mobile home form button finally working

--- a/Frontend/src/pages/Form/Form.css
+++ b/Frontend/src/pages/Form/Form.css
@@ -164,7 +164,8 @@ textarea {
   /* LAPTOP */
   @media (min-width: 768px) {
     hr {
-        display: none;
+        border: 2px solid #FFA07A;
+        margin-bottom: 3em;
     }
 
     .form-box {
