--- a/Frontend/src/pages/Home/Home.css
+++ b/Frontend/src/pages/Home/Home.css
@@ -21,18 +21,22 @@ body {
     width: 30%;
 }
 
-/* BUTTON HAS DISAPPEARED WTFFFFFFFFFFF */
-.btn--link {
-    text-align: center;
-    border-radius: 10px;
-    width: 80%;
-    text-decoration: none;
-    font-size: 1em;
-    color: whitesmoke;
-    padding: 14px 20px;
-    border: 1px solid #ffa07a;
-    transition: all 0.3s ease-out;
-} 
+.mobile-nav-btn {
+    position: relative;
+    top: -14em;
+    display: inline;
+}
+
+Button {
+    background: fbe8a6!important;
+    border: .15em solid #FFA07A!important;
+}
+
+.btn-link {
+    position: relative;
+    margin-left: 33%;
+    width: 35%;
+}
 
 img {
     max-width: 100%;
@@ -142,6 +146,10 @@ hr {
         display: none;
     }
 
+    .mobile-nav-btn {
+        display: none;
+    }
+
     .searchBar-input {
         top: -24em;
     }
@@ -200,7 +208,6 @@ hr {
         width: 25%;
         margin-left: 55%;
         margin-right: 5%;
-        border: 2px solid #F4976C;
         box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25);
     }
 }
