--- a/Frontend/src/pages/Form/Form.css
+++ b/Frontend/src/pages/Form/Form.css
@@ -1,3 +1,13 @@
+.icon {
+    background: url('../../RMI_Logo.png');
+    background-repeat: no-repeat;
+    margin-left: 1.5em;
+    margin-top: .8em;
+    height: 5em;
+    width: 5em;
+    display: inline;
+}
+
 html {
     height: 100%;
 }
