--- a/Frontend/src/pages/Form/Form.css
+++ b/Frontend/src/pages/Form/Form.css
@@ -205,6 +205,12 @@ textarea {
         padding-right: 1em;
         padding-top: .5em;
         padding-bottom: .5em;
+        box-shadow: 0 0.5em 0.5em -0.6em
+    }
+
+    button:hover {
+        background: whitesmoke;
+        box-shadow: 0 0.5em 0.5em -0.4em;
     }
 
     .button-submit {
