--- a/Frontend/src/pages/Form/Form.css
+++ b/Frontend/src/pages/Form/Form.css
@@ -117,49 +117,11 @@ textarea {
 }
 
 /* Confirmation Overlay */
-.overlay {
-    position: fixed;
-    width: 100%;
-    top: 20%;
-    left: 10%;
-    width: 80%;
-    height: 40%;
-    align-items: center;
-    justify-content: center;
-    /* display: flex; */
-    display: none;
-    opacity: .9;
-    flex-wrap: wrap;
-    z-index: 10000;
-  }
 
-  .popup {
-      max-width: 80%;
-      background: #fbe8a6;
-      border: 3px solid #ffa07a;
-      font-size: 1.3em;
-      border-radius: 10px;
-  }
-
-  .popup h1, p {
-      text-align: center;
-      font-family: Noto Serif;
-  }
-
-  .confirmed {
-      padding-left: 1em;
-      padding-right: 1em;
-  }
-
-  .exit-overlay {
-      text-align: center;
-  }
-
-  .btn-cancel {
-      background: whitesmoke;
-      margin-bottom: .2em;
-  } 
-
+.btn-close {
+    text-align: center;
+    margin-bottom: 1rem;
+}
 
   /* LAPTOP */
   @media (min-width: 768px) {
