Here's the working confirmation overlay! I had to fix the form refresh issue a diff way bc putting it outside the form caused it to submit forms that had empty fields. So I instead  put the button back into the form and fixed it using e.preventDefault() in the addReviews func.

--- a/Frontend/src/components/Button/Button.css
+++ b/Frontend/src/components/Button/Button.css
@@ -33,6 +33,15 @@
     box-shadow: 0px 0px 25px rgb(207, 207, 207);
 }
 
+/* TODO: Remove if not used */
+/*.btn--shadow---bottom {*/
+/*    background-color: transparent;*/
+/*    padding: 8px 20px;*/
+/*    border: 1px solid var(--secondary);*/
+/*    transition: all 0.3s ease-out;*/
+/*    box-shadow: 0px 0px 25px 0px  rgb(207, 207, 207);*/
+/*}*/
+
 .btn--medium {
     padding: 8px 20px;
     font-size: 18px;
