added styling for header

--- a/Frontend/src/pages/Form/Form.css
+++ b/Frontend/src/pages/Form/Form.css
@@ -8,6 +8,10 @@
     display: inline;
 }
 
+a.navbar-logo:hover {
+    background: linear-gradient(0deg,white, #FFA07A);
+}
+
 html {
     height: 100%;
 }
