Got the search bar in the results page to connect to the database and work properly. Currently in the process of getting the search bar on the home page working. Next steps include imporoving the css styling of the results page as well as fixing the search bar's magnifying glass.

--- a/Frontend/src/pages/Home/Home.css
+++ b/Frontend/src/pages/Home/Home.css
@@ -84,6 +84,8 @@ img {
     top: -15em;
     align-items: center;
     position: relative;
+
+    transition: all 0.3s ease-out;
 }
 
 .searchBar-input:focus {
