--- a/Frontend/src/components/SearchResult/SearchResult.css
+++ b/Frontend/src/components/SearchResult/SearchResult.css
@@ -8,7 +8,7 @@
 }
 
 .card-container {
-    width: 100%;
+    width: 80%;
     height: 400px;
     display: flex;
     flex-direction: column;
@@ -16,6 +16,8 @@
     border-radius: 30px;
     transition: 0.2s ease;
     border: 2px solid var(--secondary);
+
+    margin-top: 2em;
 }
 
 .card-header {
