--- a/Frontend/src/pages/Results/Results.css
+++ b/Frontend/src/pages/Results/Results.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     padding: 1rem 2rem 5rem 2rem;
+    justify-content: space-between;
 }
 
 .searchBar-container {
@@ -25,4 +26,11 @@
     line-height: 95px;
     text-transform: capitalize;
     color: #042A2B;
+}
+
+.item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
