--- a/Frontend/src/pages/Home/Home.css
+++ b/Frontend/src/pages/Home/Home.css
@@ -44,6 +44,8 @@ img {
 }
 
 .slogan {
+    display: flex;
+    flex-direction: column;
     height: 5%;
 }
 
@@ -66,9 +68,21 @@ img {
 }
 
 .search-icon {
+    /*position: relative;*/
+    /*margin-left: 80%;*/
+    /*top: -16.5em;*/
+}
+
+.searchBar {
+    width: 90%;
+    align-self: center;
+
     position: relative;
-    margin-left: 80%;
-    top: -16.5em;
+    display: flex;
+    /*flex-direction: row;*/
+    top: -24em;
+    justify-content: space-evenly;
+    /*align-items: center;*/
 }
 
 .searchBar-input {
@@ -79,9 +93,9 @@ img {
     display: flex; 
     padding: .5em;
     font-size: 1em;
-    width: 70%;
-    height: 2em;
-    top: -15em;
+    width: 100%;
+    height: 3em;
+    /*top: -15em;*/
     align-items: center;
     position: relative;
 
@@ -152,13 +166,19 @@ hr {
         display: none;
     }
 
+    .searchBar {
+        position: relative;
+        top: -20em;
+    }
+
     .searchBar-input {
-        top: -24em;
+        /*top: -24em;*/
     }
 
     .search-icon {
-        top: -25.6em;
-        margin-left: 81.5%;
+        width: 3em;
+        /*top: -26.7em;*/
+        /*margin-left: 81.5%;*/
     }
 
     ::placeholder {
@@ -222,14 +242,19 @@ hr {
         font-size: 3em;
     }
 
+    .searchBar {
+        position: relative;
+        top: -30em;
+    }
+
     .searchBar-input {
-        top: -35em;
-        height: 2.5em;
+        /*top: -35em;*/
+        /*height: 2.5em;*/
     }
 
     .search-icon {
-        top: -36.5em;
-        margin-left: 82%;
+        /*top: -36.5em;*/
+        /*margin-left: 82%;*/
     }
 
     ::placeholder {
